[package]
name = "langviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.10"
iced = {version = "0.14.0", features = ["canvas"]}
log = "0.4.32"
rstar = "0.13.0"

[profile.release]
lto = true          
codegen-units = 1   
panic = 'abort'     
strip = true  

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"

[lints.rustdoc]
private_intra_doc_links = "warn"